--- a/main/templates/includes/header/user_dropdown.html
+++ b/main/templates/includes/header/user_dropdown.html
@@ -24,8 +24,8 @@
             </a>
         </li>
         <li>
-            <a class="dropdown-item" href="{{ url_for('socials.social_message') }}">
-                <i class="fa-regular fa-comments"></i>  Message a Friend
+            <a class="dropdown-item" href="{{ url_for('socials.social_user_list') }}">
+                <i class="fa-regular fa-comments"></i>  New Chat
             </a>
         </li>
         <!-- <li>
