--- a/main/templates/module/module_question_single.html
+++ b/main/templates/module/module_question_single.html
@@ -38,7 +38,7 @@
         {% endif %}
     </div>
     <div class="">
-        <span>Date posted: </span> {{ question.date.strftime('%I:%M, %d %b %Y') }} (UTC)
+        <span>Date posted: </span> {{ question.date.strftime('%H:%M, %d %b %Y') }} (UTC)
     </div>
 </div>
 
@@ -48,7 +48,7 @@
 <div class="d-flex flex-wrap p-2">
     {% for comment in comments.items %}
     {# reference for formating time: https://www.programiz.com/python-programming/datetime/strftime [accessed: 2 apr, 2023] #}
-    {% set temp = comment.user.username + ' - ' + comment.date_sent.strftime('%I:%M, %d %b %Y') %}
+    {% set temp = comment.user.username + ' - ' + comment.date_sent.strftime('%H:%M, %d %b %Y') %}
     {# reference: https://stackoverflow.com/questions/36458482/how-to-not-render-a-entire-string-with-jinja2 [accessed: 26 Mar 2023] #}
     {{ card(
         title = temp,
