--- a/main/templates/student/student_note_single.html
+++ b/main/templates/student/student_note_single.html
@@ -22,10 +22,10 @@
 
         <div class="d-flex flex-wrap p-2">
             <div class="col pe-4">
-                Created: {{ note.date_created.strftime('%I:%M, %d %b %Y') }} (UTC)
+                Created: {{ note.date_created.strftime('%H:%M, %d %b %Y') }} (UTC)
             </div>
             <div class="text-end">
-                Last Edited: {{ note.date_edited.strftime('%I:%M, %d %b %Y') }} (UTC)
+                Last Edited: {{ note.date_edited.strftime('%H:%M, %d %b %Y') }} (UTC)
             </div>
         </div>
 
