--- a/main/templates/module/module_document_view.html
+++ b/main/templates/module/module_document_view.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="col text-end">
-            Date: {{ module_document.date.strftime('%I:%M, %d %b %Y') }} (UTC)
+            Date: {{ module_document.date.strftime('%H:%M, %d %b %Y') }} (UTC)
         </div>
     </div>
 
