--- a/main/templates/module/module_image_view.html
+++ b/main/templates/module/module_image_view.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="col text-end">
-            Date: {{ module_image.date.strftime('%I:%M, %d %b %Y') }} (UTC)
+            Date: {{ module_image.date.strftime('%H:%M, %d %b %Y') }} (UTC)
         </div>
     </div>
 
