--- a/main/templates/helpers/blue_tile.html
+++ b/main/templates/helpers/blue_tile.html
@@ -1,5 +1,5 @@
 {% macro blue_tile(title = none, description = none, link = none, link_text = none) %}
-<div class="text-center py-5 bg-info">
+<div class="text-center py-5 px-3 bg-info" style="border-radius: 7px;">
     <h3>{{ title }}</h3>
     
     <p>
