--- a/main/templates/social/social_profile.html
+++ b/main/templates/social/social_profile.html
@@ -91,7 +91,7 @@
 <hr>
 <br>
 
-<h3>Modules {% if user == current_user %}<span style="text-decoration: underline red;">you</span>{% else %}<span style="text-decoration: underline red;">{{ user.username}}</span>{% endif %} follow</h3>
+<h3>Modules {% if user == current_user %}<span style="text-decoration: underline red;">you</span>{% else %}<span style="text-decoration: underline red;">{{ user.username}}</span>{% endif %} follows</h3>
 
 <div class="">
     {% if users_modules %}    
