--- a/main/templates/module/lecture/module_lecture_single.html
+++ b/main/templates/module/lecture/module_lecture_single.html
@@ -4,37 +4,37 @@
 {% from "helpers/cards.html" import card %}
 {% from "helpers/blue_tile.html" import blue_tile %}
 
-<div class="d-flex flex-wrap">
-    <div class="col">
+<div class="row">
+    <div class="col-8">
         <h1>{{ lecture.title }}</h1>
     </div>
-    <div class="col text-end">
+    <div class="col-4 text-end">
         {% if current_user.id == lecture.user_id %}
         <a class="btn btn-danger" href="{{ url_for('modules.module_lecture_delete', lecture_id = lecture.id) }}">Delete lecture</a>
         {% endif %}
     </div>
 </div>
 
-<div class="d-flex flex-wrap p-2 ps-0">
-    <div class="col">
+<div class="row p-2 ps-0">
+    <div class="col-md-4">
         {% if current_user == lecture.user %}
         <span>Posted by: </span> YOU
         {% else %}
         <span>Posted by: </span> {{ lecture.user.username }}
         {% endif %}
     </div>
-    <div class="">
+    <div class="col-md-8 text-md-end">
         <span>Date posted: </span> {{ lecture.date_added.strftime('%H:%M, %d %b %Y') }} (UTC)
     </div>
 </div>
 
 <div class="bg-light p-4 mt-3 rounded">
     <div class="row pb-3">
-        <div class="col">
-            <strong>Finishes</strong>: {{ lecture.date_start.strftime('%H:%M, %d %b %Y') }}
+        <div class="col-md-6">
+            <strong>Starts</strong>: {{ lecture.date_start.strftime('%H:%M, %d %b %Y') }}
         </div>
 
-        <div class="col text-end">
+        <div class="col-md-6 text-md-end">
             <strong>Finishes</strong>: {{ lecture.date_end.strftime('%H:%M, %d %b %Y') }}
         </div>
     </div>
