--- a/main/templates/module/module_selection.html
+++ b/main/templates/module/module_selection.html
@@ -20,7 +20,7 @@
 {% if non_taking_modules %}
 <br>
 
-<h2>Module to choose from</h2>
+<h2>Modules to choose from</h2>
 
 <div class="d-flex flex-wrap p-2">
     {% for module in non_taking_modules %}
